[package]
name = "grikod"
version = "0.1.2"
edition = "2024"
authors = ["Mehmet Keçeci <mkececi@yaani.com>"]
description = "A safe Rust library implementing the standard Gray code conversion."
license = "MIT"
repository = "https://github.com/WhiteSymmetry/grikodrs"
keywords = ["grikod", "gray-code", "binary", "codec", "error-handling", "graycode"]
categories = ["encoding", "mathematics"]
rust-version = "1.85.0"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc"
]

[dependencies]

[dev-dependencies]
# Test ve örnekler için
